--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
         <div class="">
           <div class="margin-footer">
             <a class="logo" href="./" lang="en"
-              ><span class="web___logo">Web</span
+              ><span class="web__logo">Web</span
               ><span class="white-Studio">Studio</span></a
             >
           </div>
