--- a/index.html
+++ b/index.html
@@ -60,6 +60,24 @@
             >
           </li>
         </ul>
+        <button type="burger-btn" class="burger-btn">
+          <svg class="burger-btn__icon">
+            <use href="./images/icon/sprite.svg#burger-icon"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="mobile-meny">
+        <div class="conteiner mobile-meny__conteiner">
+          <button
+            type="button"
+            class="mobile-meny__close mobile-meny__close-btn"
+            data-modal-close
+          >
+            <svg class="mobile-meny__closen-icon">
+              <use href="./images/icon/sprite.svg#close"></use>
+            </svg>
+          </button>
+        </div>
       </div>
     </header>
     <!-- End header -->
