--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       </section>
 
       <!-- Чем мы занимаемся -->
-      <section class="section container">
+      <section class="section container when-gob-section">
         <h2 class="two-title when">Чем мы занимаемся</h2>
         <ul class="when-gob">
           <li class="when-gob-item">
