--- a/index.html
+++ b/index.html
@@ -246,12 +246,39 @@
           <h2 class="two-title big">Наша команда</h2>
           <ul class="comande-img">
             <li class="comande-img-item">
-              <img
-                src="./images/team/team-img-1.jpg"
-                alt="фото мужчины"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/team/team-img-2x.jpg 2x,
+                    ./images/team/team-img-3x.jpg 3x
+                  "
+                />
+
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/team/team-img-1x.jpg 1x,
+                    ./images/team/team-img-2x.jpg 2x
+                  "
+                />
+
+                <source
+                  media="(min-width: 480px)"
+                  srcset="
+                    ./images/team/team-img-1x.jpg 1x,
+                    ./images/team/team-img-2x.jpg 2x
+                  "
+                />
+
+                <img
+                  class="about-list-img"
+                  src="./images/team/team-img-1.jpg"
+                  alt="фото мужчины"
+                  width="270"
+                  height="260"
+                />
+              </picture>
               <div class="background-color-comande">
                 <h4 class="name-title">Игорь Демьяненко</h4>
                 <p class="work-title" lang="en">Product Designer</p>
@@ -289,13 +316,39 @@
             </li>
 
             <li class="comande-img-item">
-              <img
-                class="comande-img-foto"
-                src="./images/team/team-img-2.jpg"
-                alt="фото женщины"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/team/team-img-2x (2).jpg 2x,
+                    ./images/team/team-img-3x (2).jpg 3x
+                  "
+                />
+
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/team/team-img-1x (2).jpg 1x,
+                    ./images/team/team-img-2x (2).jpg 2x
+                  "
+                />
+
+                <source
+                  media="(min-width: 480px)"
+                  srcset="
+                    ./images/team/team-img-1x (2).jpg 1x,
+                    ./images/team/team-img-2x (2).jpg 2x
+                  "
+                />
+
+                <img
+                  class="comande-img-foto"
+                  src="./images/team/team-img-2.jpg"
+                  alt="фото женщины"
+                  width="270"
+                  height="260"
+                />
+              </picture>
               <div class="background-color-comande">
                 <h4 class="name-title">Ольга Репина</h4>
                 <p class="work-title" lang="en">Frontend Developer</p>
@@ -333,12 +386,38 @@
             </li>
 
             <li class="comande-img-item">
-              <img
-                src="./images/team/team-img-3.jpg"
-                alt="фото мужчины"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/team/team-img-2x (3).jpg 2x,
+                    ./images/team/team-img-3x (3).jpg 3x
+                  "
+                />
+
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/team/team-img-1x (3).jpg 1x,
+                    ./images/team/team-img-2x (3).jpg 2x
+                  "
+                />
+
+                <source
+                  media="(min-width: 480px)"
+                  srcset="
+                    ./images/team/team-img-1x (3).jpg 1x,
+                    ./images/team/team-img-2x (3).jpg 2x
+                  "
+                />
+
+                <img
+                  src="./images/team/team-img-3.jpg"
+                  alt="фото мужчины"
+                  width="270"
+                  height="260"
+                />
+              </picture>
               <div class="background-color-comande">
                 <h4 class="name-title">Николай Тарасов</h4>
                 <p class="work-title" lang="en">Marketing</p>
