--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container footer-container">
-        <div class="">
+        <div class="mobile-footer">
           <div class="margin-footer">
             <a class="logo" href="./" lang="en"
               ><span class="web__logo">Web</span
