--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       </section>
 
       <!-- benefits -->
-      <!-- <section class="section container benefits">
+      <section class="section container benefits">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="benefits__list">
           <li class="benefits-item">
@@ -192,10 +192,10 @@
             </p>
           </li>
         </ul>
-      </section> -->
+      </section>
 
       <!-- Чем мы занимаемся -->
-      <!-- <section class="section container when-gob-section">
+      <section class="section container when-gob-section">
         <h2 class="two-title when">Чем мы занимаемся</h2>
         <ul class="when-gob">
           <li class="when-gob-item">
@@ -237,11 +237,11 @@
               </div>
             </div>
           </li>
-        </ul> -->
+        </ul>
       <!-- </section> -->
 
       <!-- Наша команда -->
-      <!-- <section class="comande section">
+      <section class="comande section">
         <div class="container">
           <h2 class="two-title big">Наша команда</h2>
           <ul class="comande-img">
@@ -499,9 +499,9 @@
           </ul>
         </div>
       </section>
- -->
+
       <!-- Постоянные клиенты -->
-      <!-- <section class="section">
+      <section class="section">
         <div class="container">
           <h2 class="two-title big">Постоянные клиенты</h2>
           <ul class="customers-icon-list">
@@ -550,11 +550,11 @@
           </ul>
         </div>
       </section>
-    </main> -->
+    </main>
     <!-- end main   -->
 
     <!-- footer -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="mobile-footer">
           <div class="margin-footer">
@@ -638,7 +638,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- backdrop -->
     <div class="backdrop is-hidden" data-modal>
