--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
     <!-- header -->
     <header class="header">
       <div class="container header__container">
+          <div>
+            <a class="logo logo__margin" href="./" lang="en"
+              ><span class="web__logo">Web</span>Studio
+            </a>
+          </div>
         <nav class="nav">
-          <a class="logo logo__margin" href="./" lang="en"
-            ><span class="web__logo">Web</span>Studio
-          </a>
           <ul class="menu">
             <li class="menu__item">
               <a class="menu__studio current" href="./index.html">
