--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <!-- header -->
     <header class="header">
       <div class="container header__container">
-          <div>
-            <a class="logo logo__margin" href="./" lang="en"
-              ><span class="web__logo">Web</span>Studio
-            </a>
-          </div>
+        <div>
+          <a class="logo logo__margin" href="./" lang="en"
+            ><span class="web__logo">Web</span>Studio
+          </a>
+        </div>
         <nav class="nav">
           <ul class="menu">
             <li class="menu__item">
@@ -240,7 +240,7 @@
             </div>
           </li>
         </ul>
-      <!-- </section> -->
+      </section>
 
       <!-- Наша команда -->
       <section class="comande section">
