--- a/index.html
+++ b/index.html
@@ -273,13 +273,7 @@
                   "
                 />
 
-                <img
-                  class="about-list-img"
-                  src="./images/team/team-img-1.jpg"
-                  alt="фото мужчины"
-                  width="270"
-                  height="260"
-                />
+                <img class="about-list-img" src="#" alt="фото мужчины" />
               </picture>
               <div class="background-color-comande">
                 <h4 class="name-title">Игорь Демьяненко</h4>
@@ -322,34 +316,28 @@
                 <source
                   media="(min-width: 1200px)"
                   srcset="
-                    ./images/team/team-img-2x (2).jpg 2x,
-                    ./images/team/team-img-3x (2).jpg 3x
+                    ./images/team/team-img-2x2.jpg 2x,
+                    ./images/team/team-img-3x2.jpg 3x
                   "
                 />
 
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/team/team-img-1x (2).jpg 1x,
-                    ./images/team/team-img-2x (2).jpg 2x
+                    ./images/team/team-img-1x2.jpg 1x,
+                    ./images/team/team-img-2x2.jpg 2x
                   "
                 />
 
                 <source
                   media="(min-width: 480px)"
                   srcset="
-                    ./images/team/team-img-1x (2).jpg 1x,
-                    ./images/team/team-img-2x (2).jpg 2x
+                    ./images/team/team-img-1x2.jpg 1x,
+                    ./images/team/team-img-2x2.jpg 2x
                   "
                 />
 
-                <img
-                  class="comande-img-foto"
-                  src="./images/team/team-img-2.jpg"
-                  alt="фото женщины"
-                  width="270"
-                  height="260"
-                />
+                <img class="about-list-img" src="#" alt="фото женщины" />
               </picture>
               <div class="background-color-comande">
                 <h4 class="name-title">Ольга Репина</h4>
@@ -392,33 +380,27 @@
                 <source
                   media="(min-width: 1200px)"
                   srcset="
-                    ./images/team/team-img-2x (3).jpg 2x,
-                    ./images/team/team-img-3x (3).jpg 3x
+                    ./images/team/team-img-2x5.jpg 2x,
+                    ./images/team/team-img-3x5.jpg 3x
                   "
                 />
 
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/team/team-img-1x (3).jpg 1x,
-                    ./images/team/team-img-2x (3).jpg 2x
+                    ./images/team/team-img-1x5.jpg 1x,
+                    ./images/team/team-img-2x5.jpg 2x
                   "
                 />
 
                 <source
                   media="(min-width: 480px)"
                   srcset="
-                    ./images/team/team-img-1x (3).jpg 1x,
-                    ./images/team/team-img-2x (3).jpg 2x
+                    ./images/team/team-img-1x5.jpg 1x,
+                    ./images/team/team-img-2x5.jpg 2x
                   "
                 />
-
-                <img
-                  src="./images/team/team-img-3.jpg"
-                  alt="фото мужчины"
-                  width="270"
-                  height="260"
-                />
+                <img class="about-list-img" src="#" alt="фото мужчины" />
               </picture>
               <div class="background-color-comande">
                 <h4 class="name-title">Николай Тарасов</h4>
@@ -457,12 +439,32 @@
             </li>
 
             <li class="comande-img-item">
-              <img
-                src="./images/team/team-img-4.jpg"
-                alt="фото мужчины"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/team/team-img-2x4.jpg 2x,
+                    ./images/team/team-img-3x4.jpg 3x
+                  "
+                />
+
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/team/team-img-1x4.jpg 1x,
+                    ./images/team/team-img-2x4.jpg 2x
+                  "
+                />
+
+                <source
+                  media="(min-width: 480px)"
+                  srcset="
+                    ./images/team/team-img-1x4.jpg 1x,
+                    ./images/team/team-img-2x4.jpg 2x
+                  "
+                />
+                <img class="about-list-img" src="#" alt="фото мужчины" />
+              </picture>
               <div class="background-color-comande">
                 <h4 class="name-title">Михаил Ермаков</h4>
                 <p class="work-title" lang="en">UI Designer</p>
