--- a/index.html
+++ b/index.html
@@ -256,7 +256,6 @@
                     ./images/team/team-img-3x.jpg 3x
                   "
                 />
-
                 <source
                   media="(min-width: 768px)"
                   srcset="
@@ -589,7 +588,7 @@
           </address>
         </div>
         <div class="">
-          <h3 class="footer-h-three">присоединяйтесь</h3>
+          <h3 class="footer-h-three margin-footer">присоединяйтесь</h3>
           <ul class="footer-icon-list">
             <li class="footer-icon-item">
               <a href="" class="footer-icons">
@@ -622,7 +621,7 @@
           </ul>
         </div>
         <div>
-          <h3 class="footer-h-three">Подпишитесь на рассылку</h3>
+          <h3 class="footer-h-three margin-footer">Подпишитесь на рассылку</h3>
           <form action="#" class="modal-form-footer">
             <label class="modal-form-footer-label">
               <input
