--- a/index.html
+++ b/index.html
@@ -559,8 +559,8 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container footer-container">
-        <div class="mobile-footer">
-          <div class="margin-footer">
+        <div class="mobile-footer block-footer">
+          <div class="margin-footer footer-padding-logo">
             <a class="logo" href="./" lang="en"
               ><span class="web__logo">Web</span
               ><span class="white-Studio">Studio</span></a
@@ -568,7 +568,7 @@
           </div>
 
           <address id="Контакты">
-            <ul class="contacts">
+            <ul class="contacts block-footer footer-padding-contacts">
               <li class="contacts-item">
                 <a class="target" href="https://goo.gl/maps/8Pakx56sfDg3WoJN7"
                   >г. Киев, пр-т Леси Украинки, 26</a
@@ -588,8 +588,10 @@
           </address>
         </div>
         <div class="">
-          <h3 class="footer-h-three margin-footer">присоединяйтесь</h3>
-          <ul class="footer-icon-list">
+          <h3 class="footer-h-three margin-footer footer-padding-logo">
+            присоединяйтесь
+          </h3>
+          <ul class="footer-icon-list footer-padding-contacts">
             <li class="footer-icon-item">
               <a href="" class="footer-icons">
                 <svg class="footer-icon-class">
@@ -621,7 +623,9 @@
           </ul>
         </div>
         <div>
-          <h3 class="footer-h-three margin-footer">Подпишитесь на рассылку</h3>
+          <h3 class="footer-h-three margin-footer footer-padding-logo">
+            Подпишитесь на рассылку
+          </h3>
           <form action="#" class="modal-form-footer">
             <label class="modal-form-footer-label">
               <input
