--- a/index.html
+++ b/index.html
@@ -68,57 +68,57 @@
           </svg>
         </button>
       </div>
-      <div class="mobile-meny" data-menu>
-        <div class="conteiner mobile-meny__conteiner">
+      <div class="mobile-menu" data-menu>
+        <div class="conteiner mobile-menu__conteiner">
           <button
             type="button"
-            class="mobile-meny__close mobile-meny__close-btn"
+            class="mobile-menu__close mobile-menu__close-btn"
             data-menu-close
           >
-            <svg class="mobile-meny__closen-icon">
+            <svg class="mobile-menu__closen-icon">
               <use href="./images/icon/sprite.svg#close"></use>
             </svg>
           </button>
-          <ul class="nav-many link">
-            <li class="nav-many__item">
-              <a href="./index.html" class="nav-many__link list">Студия</a>
+          <ul class="nav-menu link">
+            <li class="nav-menu__item">
+              <a href="./index.html" class="nav-menu__link list">Студия</a>
             </li>
-            <li class="nav-many__item">
-              <a href="./portfolio.html" class="nav-many__link list"
+            <li class="nav-menu__item">
+              <a href="./portfolio.html" class="nav-menu__link list"
                 >Портфолио</a
               >
             </li>
-            <li class="nav-many__item">
-              <a href="#Контакты" class="nav-many__link list">Контакты</a>
+            <li class="nav-menu__item">
+              <a href="#Контакты" class="nav-menu__link list">Контакты</a>
             </li>
           </ul>
-          <ul class="many-contacts__list">
-            <li class="many-contacts__link">
-              <a class="many-contacts tel__link" href="tel:+380961111111">
+          <ul class="menu-contacts__list">
+            <li class="menu-contacts__link">
+              <a class="menu-contacts tel__link" href="tel:+380961111111">
                 +38 096 111 11 11</a
               >
             </li>
-            <li class="many-contacts__link">
+            <li class="menu-contacts__link">
               <a
-                class="many-contacts mail__link"
+                class="menu-contacts mail__link"
                 href="mailto:info@devstudio.com"
               >
                 info@devstudio.com</a
               >
             </li>
           </ul>
-          <ul class="many-lists link">
-            <li class="many-lists__item">
-              <a href="#" class="many-lists__item-link list">Instagram</a>
+          <ul class="menu-lists link">
+            <li class="menu-lists__item">
+              <a href="#" class="menu-lists__item-link list">Instagram</a>
             </li>
-            <li class="many-lists__item">
-              <a href="#" class="many-lists__item-link list">Twitter</a>
+            <li class="menu-lists__item">
+              <a href="#" class="menu-lists__item-link list">Twitter</a>
             </li>
-            <li class="many-lists__item">
-              <a href="#" class="many-lists__item-link list">Facebook</a>
+            <li class="menu-lists__item">
+              <a href="#" class="menu-lists__item-link list">Facebook</a>
             </li>
-            <li class="many-lists__item">
-              <a href="#" class="many-lists__item-link list">LinkedIn</a>
+            <li class="menu-lists__item">
+              <a href="#" class="menu-lists__item-link list">LinkedIn</a>
             </li>
           </ul>
         </div>
@@ -507,6 +507,7 @@
       <section class="section">
         <div class="container">
           <h2 class="two-title big">Постоянные клиенты</h2>
+          <div></div>
           <ul class="customers-icon-list">
             <li class="comande-icon-item">
               <a href="" class="customers-icons">
