--- a/portfolio.html
+++ b/portfolio.html
@@ -22,16 +22,19 @@
     <!-- header -->
     <header class="header">
       <div class="container header__container">
-        <nav class="nav">
+        <div>
           <a class="logo logo__margin" href="./" lang="en"
             ><span class="web__logo">Web</span>Studio
           </a>
+        </div>
+        <nav class="nav">
           <ul class="menu">
             <li class="menu__item">
               <a class="menu__studio" href="./index.html">
                 Студия
               </a>
             </li>
+
             <li class="menu__item">
               <a class="menu__studio current" href="./portfolio.html"
                 >Портфолио</a
@@ -61,6 +64,66 @@
             >
           </li>
         </ul>
+        <button type="burger-btn" class="burger-btn" data-menu-open>
+          <svg class="burger-btn__icon">
+            <use href="./images/icon/sprite.svg#burger-icon"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="mobile-menu" data-menu>
+        <div class="conteiner mobile-menu__conteiner">
+          <button
+            type="button"
+            class="mobile-menu__close mobile-menu__close-btn"
+            data-menu-close
+          >
+            <svg class="mobile-menu__closen-icon">
+              <use href="./images/icon/sprite.svg#close"></use>
+            </svg>
+          </button>
+          <ul class="nav-menu link">
+            <li class="nav-menu__item">
+              <a href="./index.html" class="nav-menu__link list">Студия</a>
+            </li>
+            <li class="nav-menu__item">
+              <a href="./portfolio.html" class="nav-menu__link list"
+                >Портфолио</a
+              >
+            </li>
+            <li class="nav-menu__item">
+              <a href="#Контакты" class="nav-menu__link list">Контакты</a>
+            </li>
+          </ul>
+          <ul class="menu-contacts__list">
+            <li class="menu-contacts__link">
+              <a class="menu-contacts tel__link" href="tel:+380961111111">
+                +38 096 111 11 11</a
+              >
+            </li>
+            <li class="menu-contacts__link">
+              <a
+                class="menu-contacts mail__link"
+                href="mailto:info@devstudio.com"
+              >
+                info@devstudio.com</a
+              >
+            </li>
+          </ul>
+          <ul class="menu-lists link">
+            <li class="menu-lists__item">
+              <a href="#" class="menu-lists__item-link list">Instagram</a>
+            </li>
+            <li class="menu-lists__item">
+              <a href="#" class="menu-lists__item-link list">Twitter</a>
+            </li>
+            <li class="menu-lists__item">
+              <a href="#" class="menu-lists__item-link list">Facebook</a>
+            </li>
+            <li class="menu-lists__item">
+              <a href="#" class="menu-lists__item-link list">LinkedIn</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <!-- end header -->
@@ -99,12 +162,32 @@
           <li class="portfolio-item">
             <a class="img-portfolio" href="./">
               <div class="img-portfolio-box">
-                <img
-                  src="./images/portfolio/portfolio-img-1.jpg"
-                  alt="Веб-сайт"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-2x.jpg 2x,
+                      ./images/portfolio/portfolio-img-3x.jpg 3x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-1x.jpg 1x,
+                      ./images/portfolio/portfolio-img-2x.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 480px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-1x.jpg 1x,
+                      ./images/portfolio/portfolio-img-2x.jpg 2x
+                    "
+                  />
+
+                  <img class="img-portfolio-x" src="#" alt="Веб-сайт" />
+                </picture>
                 <p class="portfolio-text-box">
                   Технокряк это современная <br />
                   площадка распространения коронавируса. Компании <br />
@@ -121,12 +204,32 @@
           <li class="portfolio-item">
             <a class="img-portfolio" href="./">
               <div class="img-portfolio-box">
-                <img
-                  src="./images/portfolio/portfolio-img-2.jpg"
-                  alt="Постер"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-2-2x.jpg 2x,
+                      ./images/portfolio/portfolio-img-2-3x.jpg 3x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-2-1x.jpg 1x,
+                      ./images/portfolio/portfolio-img-2-2x.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 480px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-2-1x.jpg 1x,
+                      ./images/portfolio/portfolio-img-2-2x.jpg 2x
+                    "
+                  />
+
+                  <img class="img-portfolio-x" src="#" alt="Постер" />
+                </picture>
                 <p class="portfolio-text-box">
                   Технокряк это современная <br />
                   площадка распространения коронавируса. Компании <br />
@@ -145,12 +248,32 @@
           <li class="portfolio-item">
             <a class="img-portfolio" href="./">
               <div class="img-portfolio-box">
-                <img
-                  src="./images/portfolio/portfolio-img-3.jpg"
-                  alt="Приложение"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-3-2x.jpg 2x,
+                      ./images/portfolio/portfolio-img-3-3x.jpg 3x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-3-1x.jpg 1x,
+                      ./images/portfolio/portfolio-img-3-2x.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 480px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-3-1x.jpg 1x,
+                      ./images/portfolio/portfolio-img-3-2x.jpg 2x
+                    "
+                  />
+
+                  <img class="img-portfolio-x" src="#" alt="Приложение" />
+                </picture>
                 <p class="portfolio-text-box">
                   Технокряк это современная <br />
                   площадка распространения коронавируса. Компании <br />
@@ -169,12 +292,32 @@
           <li class="portfolio-item">
             <a class="img-portfolio" href="./">
               <div class="img-portfolio-box">
-                <img
-                  src="./images/portfolio/portfolio-img-4.jpg"
-                  alt="Наушники"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-4-2x.jpg 2x,
+                      ./images/portfolio/portfolio-img-4-3x.jpg 3x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-4-1x.jpg 1x,
+                      ./images/portfolio/portfolio-img-4-2x.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 480px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-4-1x.jpg 1x,
+                      ./images/portfolio/portfolio-img-4-2x.jpg 2x
+                    "
+                  />
+
+                  <img class="img-portfolio-x" src="#" alt="Наушники" />
+                </picture>
                 <p class="portfolio-text-box">
                   Технокряк это современная <br />
                   площадка распространения коронавируса. Компании <br />
@@ -193,12 +336,32 @@
           <li class="portfolio-item">
             <a class="img-portfolio" href="./">
               <div class="img-portfolio-box">
-                <img
-                  src="./images/portfolio/portfolio-img-5.jpg"
-                  alt="Приложение"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-5-2x.jpg 2x,
+                      ./images/portfolio/portfolio-img-5-3x.jpg 3x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-5-1x.jpg 1x,
+                      ./images/portfolio/portfolio-img-5-2x.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 480px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-5-1x.jpg 1x,
+                      ./images/portfolio/portfolio-img-5-2x.jpg 2x
+                    "
+                  />
+
+                  <img class="img-portfolio-x" src="#" alt="Приложение" />
+                </picture>
                 <p class="portfolio-text-box">
                   Технокряк это современная <br />
                   площадка распространения коронавируса. Компании <br />
@@ -217,12 +380,32 @@
           <li class="portfolio-item">
             <a class="img-portfolio" href="./">
               <div class="img-portfolio-box">
-                <img
-                  src="./images/portfolio/portfolio-img-6.jpg"
-                  alt="Веб-сайт"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-6-2x.jpg 2x,
+                      ./images/portfolio/portfolio-img-6-3x.jpg 3x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-6-1x.jpg 1x,
+                      ./images/portfolio/portfolio-img-6-2x.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 480px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-6-1x.jpg 1x,
+                      ./images/portfolio/portfolio-img-6-2x.jpg 2x
+                    "
+                  />
+
+                  <img class="img-portfolio-x" src="#" alt="Веб-сайт" />
+                </picture>
                 <p class="portfolio-text-box">
                   Технокряк это современная <br />
                   площадка распространения коронавируса. Компании <br />
@@ -241,12 +424,32 @@
           <li class="portfolio-item">
             <a class="img-portfolio" href="./">
               <div class="img-portfolio-box">
-                <img
-                  src="./images/portfolio/portfolio-img-7.jpg"
-                  alt="Издание"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-7-2x.jpg 2x,
+                      ./images/portfolio/portfolio-img-7-3x.jpg 3x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-7-1x.jpg 1x,
+                      ./images/portfolio/portfolio-img-7-2x.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 480px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-7-1x.jpg 1x,
+                      ./images/portfolio/portfolio-img-7-2x.jpg 2x
+                    "
+                  />
+
+                  <img class="img-portfolio-x" src="#" alt="Издание" />
+                </picture>
                 <p class="portfolio-text-box">
                   Технокряк это современная <br />
                   площадка распространения коронавируса. Компании <br />
@@ -265,12 +468,32 @@
           <li class="portfolio-item">
             <a class="img-portfolio" href="./">
               <div class="img-portfolio-box">
-                <img
-                  src="./images/portfolio/portfolio-img-8.jpg"
-                  alt="Проект"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-8-2x.jpg 2x,
+                      ./images/portfolio/portfolio-img-8-3x.jpg 3x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-8-1x.jpg 1x,
+                      ./images/portfolio/portfolio-img-8-2x.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 480px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-8-1x.jpg 1x,
+                      ./images/portfolio/portfolio-img-8-2x.jpg 2x
+                    "
+                  />
+
+                  <img class="img-portfolio-x" src="#" alt="Проект" />
+                </picture>
                 <p class="portfolio-text-box">
                   Технокряк это современная <br />
                   площадка распространения коронавируса. Компании <br />
@@ -289,12 +512,32 @@
           <li class="portfolio-item">
             <a class="img-portfolio" href="./">
               <div class="img-portfolio-box">
-                <img
-                  src="./images/portfolio/portfolio-img-9.jpg"
-                  alt="Приложение"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-9-2x.jpg 2x,
+                      ./images/portfolio/portfolio-img-9-3x.jpg 3x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-9-1x.jpg 1x,
+                      ./images/portfolio/portfolio-img-9-2x.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 480px)"
+                    srcset="
+                      ./images/portfolio/portfolio-img-9-1x.jpg 1x,
+                      ./images/portfolio/portfolio-img-9-2x.jpg 2x
+                    "
+                  />
+
+                  <img class="img-portfolio-x" src="#" alt="Приложение" />
+                </picture>
                 <p class="portfolio-text-box">
                   Технокряк это современная <br />
                   площадка распространения коронавируса. Компании <br />
@@ -314,9 +557,9 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="container section footer-container">
-        <div class="">
-          <div class="margin-footer">
+      <div class="container footer-container">
+        <div class="mobile-footer block-footer">
+          <div class="margin-footer footer-padding-logo">
             <a class="logo" href="./" lang="en"
               ><span class="web__logo">Web</span
               ><span class="white-Studio">Studio</span></a
@@ -324,7 +567,7 @@
           </div>
 
           <address id="Контакты">
-            <ul class="contacts">
+            <ul class="contacts block-footer footer-padding-contacts">
               <li class="contacts-item">
                 <a class="target" href="https://goo.gl/maps/8Pakx56sfDg3WoJN7"
                   >г. Киев, пр-т Леси Украинки, 26</a
@@ -343,9 +586,11 @@
             </ul>
           </address>
         </div>
-        <div class="join">
-          <h3 class="footer-h-three">присоединяйтесь</h3>
-          <ul class="footer-icon-list">
+        <div class="">
+          <h3 class="footer-h-three margin-footer footer-padding-logo">
+            присоединяйтесь
+          </h3>
+          <ul class="footer-icon-list footer-padding-contacts">
             <li class="footer-icon-item">
               <a href="" class="footer-icons">
                 <svg class="footer-icon-class">
@@ -377,7 +622,9 @@
           </ul>
         </div>
         <div>
-          <h3 class="footer-h-three">Подпишитесь на рассылку</h3>
+          <h3 class="footer-h-three margin-footer footer-padding-logo">
+            Подпишитесь на рассылку
+          </h3>
           <form action="#" class="modal-form-footer">
             <label class="modal-form-footer-label">
               <input
@@ -398,5 +645,7 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
