--- a/portfolio.html
+++ b/portfolio.html
@@ -591,7 +591,7 @@
             присоединяйтесь
           </h3>
           <ul class="footer-icon-list footer-padding-contacts">
-            <li class="footer-icon-item">
+            <li class="footer-icon-item footer-icon-after">
               <a href="" class="footer-icons">
                 <svg class="footer-icon-class">
                   <use href="./images/icon/sprite.svg#instagram"></use>
