--- a/index.html
+++ b/index.html
@@ -92,35 +92,37 @@
               <a href="#Контакты" class="nav-menu__link list">Контакты</a>
             </li>
           </ul>
-          <ul class="menu-contacts__list">
-            <li class="menu-contacts__link">
-              <a class="menu-contacts tel__link" href="tel:+380961111111">
-                +38 096 111 11 11</a
-              >
-            </li>
-            <li class="menu-contacts__link">
-              <a
-                class="menu-contacts mail__link"
-                href="mailto:info@devstudio.com"
-              >
-                info@devstudio.com</a
-              >
-            </li>
-          </ul>
-          <ul class="menu-lists link">
-            <li class="menu-lists__item">
-              <a href="#" class="menu-lists__item-link list">Instagram</a>
-            </li>
-            <li class="menu-lists__item">
-              <a href="#" class="menu-lists__item-link list">Twitter</a>
-            </li>
-            <li class="menu-lists__item">
-              <a href="#" class="menu-lists__item-link list">Facebook</a>
-            </li>
-            <li class="menu-lists__item">
-              <a href="#" class="menu-lists__item-link list">LinkedIn</a>
-            </li>
-          </ul>
+          <div class="menu-lists-contacts">
+            <ul class="menu-contacts__list">
+              <li class="menu-contacts__link">
+                <a class="menu-contacts tel__link" href="tel:+380961111111">
+                  +38 096 111 11 11</a
+                >
+              </li>
+              <li class="menu-contacts__link">
+                <a
+                  class="menu-contacts mail__link"
+                  href="mailto:info@devstudio.com"
+                >
+                  info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="menu-lists link">
+              <li class="menu-lists__item">
+                <a href="#" class="menu-lists__item-link list">Instagram</a>
+              </li>
+              <li class="menu-lists__item">
+                <a href="#" class="menu-lists__item-link list">Twitter</a>
+              </li>
+              <li class="menu-lists__item">
+                <a href="#" class="menu-lists__item-link list">Facebook</a>
+              </li>
+              <li class="menu-lists__item">
+                <a href="#" class="menu-lists__item-link list">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
