--- a/index.html
+++ b/index.html
@@ -100,10 +100,7 @@
                 >
               </li>
               <li class="menu-contacts__link">
-                <a
-                  class="menu-contacts mail__link"
-                  href="mailto:info@devstudio.com"
-                >
+                <a class="mail__link" href="mailto:info@devstudio.com">
                   info@devstudio.com</a
                 >
               </li>
